Refactor TMPA9xx support. Add TOPASA900 board support. Make boards selectable, improve descriptions. Update machine types.

--- a/arch/arm/mach-tmpa910/Makefile
+++ b/arch/arm/mach-tmpa910/Makefile
@@ -7,4 +7,6 @@
 
 # Object file lists.
 
-obj-y                   += irq.o time.o topas910.o gpio.o led-topas910.o dma.o
+obj-y                   += irq.o time.o gpio.o led-topas910.o dma.o
+obj-$(CONFIG_MACH_TOPAS910)    += topas910.o
+obj-$(CONFIG_MACH_TOPASA900)   += topasa900.o
